--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 alert("Login realizado com sucesso!");
 
                 // REDIRECIONA PARA O SITE DA PIZZARIA
-                window.location.href = "file:///C:/Users/CCE%20i3/Downloads/site%20simples%20bradesco/cardapio.html";
+                window.location.href = "file:///C:/Users/CCE%20i3/Downloads/pizza%20delicia/cardapio.html";
             }
         });
     </script>
