--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 alert("Login realizado com sucesso!");
 
                 // REDIRECIONA PARA O SITE DA PIZZARIA
-                window.location.href = "http://127.0.0.1:5500/cardapio.html";
+                window.location.href = "https://cbmls2025.neocities.org/cardapio";
             }
         });
     </script>
